--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     </header>
  
     <main>
-       
- 
+        <div>
+            
+            <img src="img/Banner_Caribe.png" alt="">
+        </div>
+    </main>
     <footer>
  
     </footer>
