alem-do-mapa-css

--- a/index.html
+++ b/index.html
@@ -1,41 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
- 
+
 <head>
     <title>Além do Mapa</title>
     <link rel="icon" href="img/icone.webp" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
- 
- 
+
+
 </head>
- 
+
 <body>
     <header>
         <nav>
- 
-            <ul>
-                <li><a href="index.html">Home</a></li>
+
+            <ul id="lista-menu">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
                 <li><a href="">Pacotes pelo Mundo</a></li>
                 <li><a href="">Destinos</a></li>
                 <li><a href="">Promoções</a></li>
                 <li><a href="">Atendimento</a></li>
             </ul>
- 
+
         </nav>
- 
+
     </header>
- 
+
     <main>
-        <div>
-            
-            <img src="img/Banner_Caribe.png" alt="">
+        <section id="Banner">
+            <div id="div-banner">
+                <img id="img_banner" src="img/Banner_Caribe.png" alt="">
+            </div>
+        </section>
+        <section id="lugares">
+            <h2 id="titulo-lugares">Lugares para Conhecer</h2>
+        </section>
+        <div id="lugares-viajar">
+            <div>
+                <img src="lugares/mexico.png" alt="México">
+            </div>
+            <div>
+                <img src="lugares/tokyo.png" alt="Tokyo">
+            </div>
+            <div>
+                <img src="lugares/paris.png" alt="Paris">
+            </div>
+            <div>
+                <img src="lugares/queestown.png" alt="Queestowm">
+            </div>
+            <div>
+                <img src="lugares/roma.png" alt="Roma">
+            </div>
+            <div>
+                <img src="lugares/sydney.png" alt="Sydney">
+            </div>
+            <div>
+                <img src="lugares/machu picchu.png" alt="Machu picchu">
+            </div>
+            <div>
+                <img src="lugares/egito.png" alt="Egito">
+            </div>
+            <div>
+                <img src="lugares/barcelona.png" alt="Barcelona">
+            </div>
         </div>
     </main>
+
     <footer>
- 
+
     </footer>
- 
+
 </body>
- 
+
 </html>
