--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
-                <li><a href="">Pacotes pelo Mundo</a></li>
-                <li><a href="">Destinos</a></li>
-                <li><a href="">Promoções</a></li>
-                <li><a href="">Atendimento</a></li>
+                <li><a href="pacotes-pelo-mundo.html">Pacotes pelo Mundo</a></li>
+                <li><a href="destinos.html">Destinos</a></li>
+                <li><a href="promocoes.html">Promoções</a></li>
+                <li><a href="atendimento.html">Atendimento</a></li>
             </ul>
 
         </nav>
@@ -39,31 +39,59 @@
         </section>
         <div id="lugares-viajar">
             <div>
-                <img src="lugares/mexico.png" alt="México">
+                <a href="pagina_lugares/caribe.html">
+                    <img src="img/lugares/caribe.png" alt="Caribe">
+                </a>
             </div>
             <div>
-                <img src="lugares/tokyo.png" alt="Tokyo">
+                <img src="img/lugares/Banner Cidade do Cabo 2.png" alt="Cidade do Cabo">
             </div>
             <div>
-                <img src="lugares/paris.png" alt="Paris">
+                <img src="img/lugares/mexico.png" alt="México">
             </div>
             <div>
-                <img src="lugares/queestown.png" alt="Queestowm">
+
+                <img src="img/lugares/tokyo.png" alt="Tokyo">
+
             </div>
             <div>
-                <img src="lugares/roma.png" alt="Roma">
+                <img src="img/lugares/paris.png" alt="Paris">
             </div>
             <div>
-                <img src="lugares/sydney.png" alt="Sydney">
+                <img src="img/lugares/queestown.png" alt="Queestowm">
             </div>
             <div>
-                <img src="lugares/machu picchu.png" alt="Machu picchu">
+                <img src="img/lugares/roma.png" alt="Roma">
             </div>
             <div>
-                <img src="lugares/egito.png" alt="Egito">
+                <img src="img/lugares/sydney.png" alt="Sydney">
             </div>
             <div>
-                <img src="lugares/barcelona.png" alt="Barcelona">
+                <img src="img/lugares/machu picchu.png" alt="Machu picchu">
+            </div>
+            <div>
+                <img src="img/lugares/egito.png" alt="Egito">
+            </div>
+            <div>
+                <img src="img/lugares/barcelona.png" alt="Barcelona">
+            </div>
+            <div>
+                <img src="img/lugares/new york.png" alt="New York">
+            </div>
+            <div>
+                <img src="img/lugares/cidade cabo.png" alt="Cabo" srcset="">
+            </div>
+            <div>
+                <img src="img/lugares/dubai.png" alt="Dubai">
+            </div>
+            <div>
+                <img src="img/lugares/hagia sophia.png" alt="Hagia Sophia">
+            </div>
+            <div>
+                <img src="img/lugares/rio de janeiro.png" alt="Rio de Janeiro">
+            </div>
+            <div>
+                <img src="img/lugares/bangkok.png" alt="Bangkong">
             </div>
         </div>
     </main>
