adicionar-informacoes-caribe

--- a/pagina_lugares/caribe.html
+++ b/pagina_lugares/caribe.html
@@ -32,27 +32,65 @@
                 <img id="img_banner" src="../img/banners_lugares_detalhados/caribe.png" alt="">
             </div>
         </section>
-        <section id="lugares">
-            <section id="informacoes-gerais">
-                <div>
-                    <ul class="cor-laranja">
-                        <li><i class="bi bi-calendar"></i> Janeiro-Abril</li>
-                        <li><i class="bi bi-brightness-high"></i> Tropical</li>
-                        <li><i class="bi bi-currency-dollar"></i> Dolár do Caribe</li>
+        <div id="container">
+            <section id="lugares">
+                <section id="informacoes-gerais" class="espacamento">
+                    <div>
+                        <ul class="cor-laranja">
+                            <li><i class="bi bi-calendar"></i> Janeiro-Abril</li>
+                            <li><i class="bi bi-brightness-high"></i> Tropical</li>
+                            <li><i class="bi bi-currency-dollar"></i> Dolár do Caribe</li>
+                        </ul>
+                    </div>
+                </section>
+                <section id="Sobre">
+                    <div>
+                        <h2 class="cor-laranja centralizar-texto">Sobre o Caribe</h2>
+                        <p class="justificar-texto ">Areias brancas, mar cristalino e clima tropical durante todo o ano:
+                            o
+                            Caribe é o destino perfeito
+                            para quem busca relaxamento, aventura e paisagens paradisíacas. Composto por diversas ilhas
+                            e
+                            países encantadores, oferece uma rica mistura de culturas, gastronomia exótica, música
+                            vibrante
+                            e uma natureza exuberante. De resorts luxuosos a praias isoladas, o Caribe é o cenário ideal
+                            para férias inesquecíveis, lua de mel, mergulho ou simplesmente para aproveitar o melhor da
+                            vida
+                            à beira-mar.</p>
+                    </div>
+                </section>
+                <section id="cinco-lugares" class="espacamento">
+                    <h2 class="cor-laranja centralizar-texto">5 lugares para viajar</h2>
+                    <ul>
+                        <li>Punta Cana</li>
+                        <li>Aruba</li>
+                        <li>Jamaica</li>
+                        <li>Bahamas</li>
+                        <li>Saint Martin</li>
                     </ul>
-                </div>
-            </section>
-            <section id="Sobre">
-                <div>
-                    <h2 class="cor-laranja centralizar-texto">Sobre o Caribe</h2>
-                    <p>Areias brancas, mar cristalino e clima tropical durante todo o ano: o Caribe é o destino perfeito
-                        para quem busca relaxamento, aventura e paisagens paradisíacas. Composto por diversas ilhas e
-                        países encantadores, oferece uma rica mistura de culturas, gastronomia exótica, música vibrante
-                        e uma natureza exuberante. De resorts luxuosos a praias isoladas, o Caribe é o cenário ideal
-                        para férias inesquecíveis, lua de mel, mergulho ou simplesmente para aproveitar o melhor da vida
-                        à beira-mar.</p>
-                </div>
-            </section>
+                </section>
+                <section id="punta-cana">
+                    <div class="lugar-detalhado">
+                        <div class="img-detalhado">
+                            <img src="../img/punta-cana.jpg" alt="" class="img-detalhado">
+                        </div>
+                        <div class="texto-detalhado">
+                            <h3 class="cor-laranja">Punta Cana</h3>
+                            <p>É um dos destinos mais famosos do Caribe, conhecido por suas praias extensas de areia
+                                branca e mar azul-turquesa. Localizada na República Dominicana, a região encanta os
+                                visitantes com seus resorts all-inclusive, infraestrutura de luxo e uma atmosfera
+                                perfeita para descanso e lazer. O clima é tropical durante todo o ano, com sol
+                                constante
+                                e águas mornas ideais para mergulho, snorkel e passeios de catamarã. Além das
+                                paisagens
+                                paradisíacas, Punta Cana oferece opções de ecoturismo, campos de golfe e uma vida
+                                noturna animada, tornando-se um destino completo para quem busca relaxar e se
+                                divertir
+                                em meio ao cenário caribenho.</p>
+                        </div>
+                    </div>
+                </section>
+        </div>
     </main>
 </body>
 
