--- a/pagina_lugares/caribe.html
+++ b/pagina_lugares/caribe.html
@@ -74,9 +74,10 @@
                         <div class="img-detalhado">
                             <img src="../img/punta-cana.jpg" alt="" class="img-detalhado">
                         </div>
-                        <div class="texto-detalhado">
+                        <div class="texto-detalhado separacao">
                             <h3 class="cor-laranja">Punta Cana</h3>
-                            <p>É um dos destinos mais famosos do Caribe, conhecido por suas praias extensas de areia
+                            <p class="justificar-texto centralizar-texto espacamento">É um dos destinos mais famosos do
+                                Caribe, conhecido por suas praias extensas de areia
                                 branca e mar azul-turquesa. Localizada na República Dominicana, a região encanta os
                                 visitantes com seus resorts all-inclusive, infraestrutura de luxo e uma atmosfera
                                 perfeita para descanso e lazer. O clima é tropical durante todo o ano, com sol
@@ -89,6 +90,20 @@
                                 em meio ao cenário caribenho.</p>
                         </div>
                     </div>
+                    
+                    <div>
+                        
+                    <div>
+                        <h3>Aruba</h3>
+                        <p>Ilha caribenha encantadora, conhecida por suas praias de areia branca e águas cristalinas de
+                            tons azul-turquesa. Localizada fora da rota dos furacões, oferece clima ensolarado
+                            praticamente o ano inteiro, sendo um destino perfeito para quem busca tranquilidade, romance
+                            e aventura. Além das belezas naturais, Aruba encanta com sua hospitalidade, vida noturna
+                            vibrante, gastronomia internacional e opções de esportes aquáticos, como mergulho e
+                            windsurf. A mistura cultural, influenciada por holandeses, africanos e latino-americanos, dá
+                            à ilha uma atmosfera única, alegre e acolhedora</p>
+                    </div>
+                </div>
                 </section>
         </div>
     </main>
