--- a/pagina_lugares/caribe.html
+++ b/pagina_lugares/caribe.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="img/icone.webp" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/carousel/carousel.css" />
 </head>
 
 <body>
@@ -72,7 +73,11 @@
                 <section id="punta-cana">
                     <div class="lugar-detalhado">
                         <div class="img-detalhado">
-                            <img src="../img/punta-cana.jpg" alt="" class="img-detalhado">
+                            <div class="f-carousel" id="myCarousel">
+                                <div class="f-carousel__slide"><img src="../img/punta-cana.jpg" alt=""></div>
+                                <div class="f-carousel__slide"><img src="../img/punta-cana-2.jpg" alt=""></div>
+                                <div class="f-carousel__slide"><img src="../img/punta-cana-3.jpg"></div>
+                            </div>
                         </div>
                         <div class="texto-detalhado separacao">
                             <h3 class="cor-laranja">Punta Cana</h3>
@@ -90,23 +95,98 @@
                                 em meio ao cenário caribenho.</p>
                         </div>
                     </div>
-                    
-                    <div>
-                        
-                    <div>
-                        <h3>Aruba</h3>
-                        <p>Ilha caribenha encantadora, conhecida por suas praias de areia branca e águas cristalinas de
-                            tons azul-turquesa. Localizada fora da rota dos furacões, oferece clima ensolarado
-                            praticamente o ano inteiro, sendo um destino perfeito para quem busca tranquilidade, romance
-                            e aventura. Além das belezas naturais, Aruba encanta com sua hospitalidade, vida noturna
-                            vibrante, gastronomia internacional e opções de esportes aquáticos, como mergulho e
-                            windsurf. A mistura cultural, influenciada por holandeses, africanos e latino-americanos, dá
-                            à ilha uma atmosfera única, alegre e acolhedora</p>
+                    <div class="lugar-detalhado">
+
+                        <div class="texto-detalhado separacao">
+                            <h3 class="cor-laranja">Aruba</h3>
+                            <p class="justificar-texto centralizar-texto espacamento">Ilha caribenha encantadora,
+                                conhecida por suas praias de areia branca e águas cristalinas de tons azul-turquesa.
+                                Localizada fora da rota dos furacões, oferece clima ensolarado praticamente o ano
+                                inteiro, sendo um destino perfeito para quem busca tranquilidade, romance e aventura.
+                                Além das belezas naturais, Aruba encanta com sua hospitalidade, vida noturna vibrante,
+                                gastronomia internacional e opções de esportes aquáticos, como mergulho e windsurf. A
+                                mistura cultural, influenciada por holandeses, africanos e latino-americanos, dá à ilha
+                                uma atmosfera única, alegre e acolhedora</p>
+                        </div>
+                        <div class="img-detalhado">
+                            <img class="arredondar" src="../img/aruba.jpg" alt="" class="img-detalhado">
+
+                        </div>
                     </div>
-                </div>
+                    <div class="lugar-detalhado">
+                        <div class="img-detalhado">
+                            <img class="arredondar" src="../img/jamaica.jpg" alt="" class="img-detalhado">
+
+                        </div>
+                        <div class="texto-detalhado separacao">
+                            <h3 class="cor-laranja">Jamaica</h3>
+                            <p class="justificar-texto centralizar-texto espacamento">É um dos destinos mais vibrantes
+                                do Caribe, famoso por sua energia contagiante, paisagens tropicais e rica herança
+                                cultural. Localizada no coração do Mar do Caribe, a Jamaica encanta com suas praias de
+                                areia dourada, águas cristalinas e montanhas cobertas por vegetação exuberante. O clima
+                                é quente e ensolarado o ano todo, perfeito para desfrutar de mergulhos, passeios de
+                                barco e trilhas pelas cachoeiras, como a famosa Dunn’s River Falls. Além de sua beleza
+                                natural, o país é o berço do reggae e da cultura rastafári, que se refletem na música,
+                                na culinária e no estilo de vida acolhedor do povo jamaicano. Com resorts confortáveis,
+                                festas animadas e uma atmosfera descontraída, a Jamaica oferece o equilíbrio ideal entre
+                                relaxamento, cultura e diversão em meio ao paraíso caribenho.</p>
+                        </div>
+                    </div>
+                    <div class="lugar-detalhado">
+
+                        <div class="texto-detalhado separacao">
+                            <h3 class="cor-laranja">Bahamas</h3>
+                            <p class="justificar-texto centralizar-texto espacamento">É um dos destinos mais
+                                sofisticados e encantadores do Caribe, conhecido por suas águas azul-turquesa e ilhas
+                                paradisíacas que parecem saídas de um sonho. Localizado no Oceano Atlântico, o
+                                arquipélago das Bahamas é formado por mais de 700 ilhas e ilhotas, oferecendo cenários
+                                ideais para quem busca tranquilidade, luxo e contato com a natureza. O clima é tropical
+                                e ensolarado durante todo o ano, perfeito para mergulhos em recifes de corais, passeios
+                                de barco e banhos de mar em praias de areia branca e fina. Além das belezas naturais, o
+                                destino se destaca por seus resorts exclusivos, cassinos, campos de golfe e pela
+                                hospitalidade de seu povo. As Bahamas são a escolha perfeita para quem deseja combinar
+                                descanso, aventura e sofisticação em um ambiente caribenho inesquecível.</p>
+                        </div>
+                        <div class="img-detalhado">
+                            <img class="arredondar" src="../img/bahamas.jpg" alt="" class="img-detalhado">
+                        </div>
+                    </div>
+                    <div class="lugar-detalhado">
+                        <div class="img-detalhado">
+                            <img class="arredondar" src="../img/saint-martin.jpg" alt="" class="img-detalhado">
+                        </div>
+                        <div class="texto-detalhado separacao">
+                            <h3 class="cor-laranja">Saint Martin</h3>
+                            <p class="justificar-texto centralizar-texto espacamento">É um dos destinos mais charmosos
+                                do Caribe, famoso por sua combinação única de culturas francesa e holandesa, praias
+                                deslumbrantes e atmosfera cosmopolita. Localizada em uma pequena ilha dividida entre a
+                                França e os Países Baixos, Saint Martin encanta os visitantes com suas águas
+                                cristalinas, areia branca e opções de lazer que vão de esportes aquáticos a passeios
+                                gastronômicos. O clima é tropical, com sol abundante e temperaturas agradáveis durante
+                                todo o ano, ideal para mergulho, vela e passeios de catamarã. Além das praias
+                                paradisíacas, a ilha oferece boutiques elegantes, mercados locais e uma vida noturna
+                                animada, tornando Saint Martin um destino completo para quem busca relaxar, se divertir
+                                e vivenciar a cultura caribenha com um toque europeu.</p>
+                        </div>
+                    </div>
                 </section>
         </div>
     </main>
+    <div class="f-carousel" id="myCarousel">
+        <div class="f-carousel__slide">1</div>
+        <div class="f-carousel__slide">2</div>
+        <div class="f-carousel__slide">3</div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/carousel/carousel.umd.js"></script>
+    <script>
+        const container = document.getElementById("myCarousel");
+        const options = {
+            // Your custom options
+        };
+
+        Carousel(container, options).init();
+    </script>
 </body>
 
 
